fixes response overflow

--- a/client/style/response.scss
+++ b/client/style/response.scss
@@ -20,13 +20,15 @@
 .response {
   position: relative;
   @extend .small-card;
-  @extend .center;
+  @include shift(0.5);
   display: inline-block;
   background-color: white;
   min-height: 82px;
   width: 100%;
   margin-bottom: 1em;
   padding: 1em;
+  word-break: break-word;
+
 
   @include medium {
     width: 100% !important;
@@ -43,7 +45,6 @@
     margin-bottom: 1em;
 
     @include large {
-      margin-bottom: 1em;
       margin-top: 0.5em;
     }
   }
@@ -86,7 +87,6 @@
 }
 
 .response-left {
-  float: left;
   @include span-columns(3);
   @include small {
     @include span-columns(12);
@@ -107,13 +107,12 @@
 }
 
 .response-right {
-  @include span-columns(9);
+  @include span-columns(8);
   @include omega();
 
   @include small {
     @include span-columns(12);
   }
-  // margin-bottom: 3em;
 }
 
 .response-right.with-button {
